--- a/General Resume.html
+++ b/General Resume.html
@@ -14,7 +14,6 @@
   		Olagoke
   	</div>
   	<div id="contact_info_div">
-  		<span class="contact_info"><span style="font-weight: bold;">Software Engineering (Class of 2017)</span></span><br>
   		<span class="contact_info_tag">Email:&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="contact_info">ooolagok@uwaterloo.ca</span><br>
   		<span class="contact_info_tag">Phone:</span> <span class="contact_info">(628)-444-8341</span><br>
   		<span class="contact_info_tag">GitHub:</span> <span class="contact_info">Demi-O</span><br>
@@ -28,10 +27,10 @@
   <div class="section_info">
     <div class="activity">
       <span class="subsection_head">University of Waterloo</span>
-      <span class = subsection_role>Candidate for Bachelor of Software Engineering</span>
+      <span class = subsection_role>Bachelor of Software Engineering (Class of 2017)</span>
       <span class="subsection_details">September 2012 - Present</span>
       <ul>
-        <li>Courses: Cooperative and Adaptive Algorithms, Computer Networks, Concurrent and Parallel Programming, Embedded Software</li>
+        <li>Courses: Cooperative and Adaptive Algorithms, Computer Networks, Concurrent and Parallel Programming, Operating Systems, Embedded Software, Data Structures and Data Management</li>
         <li>Events Coordinator (May 2015 - April 2016) of the Black Association for Student Expression</li>
       </ul>
     </div>
@@ -45,7 +44,7 @@
     <span class = subsection_role>Software Engineer</span>
     <span class="subsection_details">San Francisco, CA | September 2016 - Present</span>
     <ul>
-      <li>Mitigated revenue loss by fixing issues preventing users from purchasing products</li>
+      <li>Mitigated revenue loss by thousands of dollars by fixing issues preventing users from purchasing products</li>
       <li>Technology/Languages: Javascript, React (Redux), Python, Node.js, Git, MySQL</li>
     </ul>
   </div>
@@ -54,8 +53,8 @@
     <span class = subsection_role>Full Stack Developer</span>
     <span class="subsection_details">Toronto, ON | January 2016 - April 2016</span>
     <ul>
-      <li>Worked on MintChip, a government-backed digital currency</li>
-      <li>Developed features such as p2p money requests and fraud mitigation using transaction limits</li>
+      <li>Worked on MintChip, a digital currency backed by the Canadian government</li>
+      <li>Developed features such as P2P money requests and fraud mitigation using transaction limits</li>
       <li>Decreased load times on the android application by implementing data caching</li>
       <li>Created an invite system where invited users could sign up and instantly receive the money sent to them</li>
       <li>Technology/Languages: Javascript, Node.js, AngularJS, Loopback, Java, SQLite, Android Studio, Git, MongoDB</li>
@@ -66,8 +65,8 @@
     <span class = subsection_role>Undergraduate Research Assistant</span>
     <span class="subsection_details"> Waterloo, ON | May 2015 - August 2015</span>
     <ul>
-      <li>Worked on an application used for HCI research into data exploration of geotagged information using multiple tablet devices and a tabletop</li>
-      <li>Significantly improved communication between devices from simple pinging to asynchronous real-time transfer of information such as the tablets' orientation in space and selected image urls</li>
+      <li>Worked on HCI research into data exploration of geotagged information using multiple tablet devices and a tabletop</li>
+      <li>Implemented asynchronous real-time transfer of information between devices</li>
       <li>Implemented HCI techniques for surfacing context-relevant information to users</li>
       <li>Created summary visualizations from application logs for researchers to gain insight into user usage patterns</li>
       <li>Technology/Languages: C#, Javascript, Node.js, Processing 2, Git, Visual Studio</li>
@@ -108,7 +107,7 @@
   	<span class="subsection_details">August 2015 - December 2015</span>
   	<ul>
   		<li>Windows application that allows control of other applications through gestures from a smartphone</li>
-  		<li>Implemented sending of instructions to selected applications from the main program</li>
+  		<li>Used the Facade design pattern to enable control of desktop applications</li>
   		<li>Implemented real-time desktop notifications to alert users of actions made on the smartphone</li>
   		<li>Technology/Languages: C#, Visual Studio, Git</li>
   	</ul>
