updated minted experience

--- a/General Resume.html
+++ b/General Resume.html
@@ -42,9 +42,11 @@
   <div class="coop_job">
     <span class="subsection_head">Minted</span>
     <span class = subsection_role>Software Engineer</span>
-    <span class="subsection_details">San Francisco, CA | September 2016 - Present</span>
+    <span class="subsection_details">San Francisco, CA | September 2016 - December 2016</span>
     <ul>
       <li>Mitigated revenue loss by thousands of dollars by fixing issues preventing users from purchasing products</li>
+      <li>Reduced size of the UI package webpack bundle by 20% by moving images from the package to S3</li>
+      <li>Helped increase user conversion by moving products to the new product display page through data and code changes</li>
       <li>Technology/Languages: Javascript, React (Redux), Python, Node.js, Git, MySQL</li>
     </ul>
   </div>
