--- a/General Resume.html
+++ b/General Resume.html
@@ -30,7 +30,7 @@
       <span class = subsection_role>Bachelor of Software Engineering (Class of 2017)</span>
       <span class="subsection_details">September 2012 - Present</span>
       <ul>
-        <li>Courses: Cooperative and Adaptive Algorithms, Computer Networks, Concurrent and Parallel Programming, Operating Systems, Embedded Software, Data Structures and Data Management</li>
+        <li>Courses: Computer Security and Privacy, Concurrent and Parallel Programming, Cooperative and Adaptive Algorithms, Computer Networks, Operating Systems, Embedded Software, Data Structures and Data Management</li>
         <li>Events Coordinator (May 2015 - April 2016) of the Black Association for Student Expression</li>
       </ul>
     </div>
