--- a/General Resume.html
+++ b/General Resume.html
@@ -14,7 +14,7 @@
   		Olagoke
   	</div>
   	<div id="contact_info_div">
-  		<span class="contact_info_tag">Email:&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="contact_info">ooolagok@uwaterloo.ca</span><br>
+  		<span class="contact_info_tag">Email:&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="contact_info">ooolagok@edu.uwaterloo.ca</span><br>
   		<span class="contact_info_tag">Phone:</span> <span class="contact_info">(226)-978-4261</span><br>
   		<span class="contact_info_tag">GitHub:</span> <span class="contact_info">Demi-O</span><br>
   		<span class="contact_info_tag">Website:</span> <span class="contact_info">demiladeolagoke.com</span>
@@ -27,8 +27,8 @@
   <div class="section_info">
     <div class="activity">
       <span class="subsection_head">University of Waterloo</span>
-      <span class = subsection_role>Bachelor of Software Engineering (Class of 2017)</span>
-      <span class="subsection_details">September 2012 - Present</span>
+      <span class = subsection_role>Bachelor of Software Engineering</span>
+      <span class="subsection_details">September 2012 - June 2017</span>
       <ul>
         <li>Courses: Computer Security and Privacy, Concurrent and Parallel Programming, Cooperative and Adaptive Algorithms, Computer Networks, Operating Systems, Embedded Software, Data Structures and Data Management</li>
         <li>Events Coordinator (May 2015 - April 2016) of the Black Association for Student Expression</li>
@@ -97,7 +97,7 @@
   </div>
   <div class="project">
   	<span class="subsection_head">WatHub (Fourth Year Design Project)</span>
-  	<span class="subsection_details">March 2016 - Present</span>
+  	<span class="subsection_details">March 2016 - March 2017</span>
   	<ul>
   		<li>Website for students to share applications that they made</li>
       <li>Set up the database and currently working on the API used by the frontend</li>
