added Tinder experience

--- a/General Resume.html
+++ b/General Resume.html
@@ -14,10 +14,11 @@
   		Olagoke
   	</div>
   	<div id="contact_info_div">
-  		<span class="contact_info_tag">Email:&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="contact_info">ooolagok@edu.uwaterloo.ca</span><br>
-  		<span class="contact_info_tag">Phone:</span> <span class="contact_info">(226)-978-4261</span><br>
+  		<span class="contact_info_tag">Email:&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="contact_info">demilade.olagoke@gmail.com</span><br>
+  		<span class="contact_info_tag">Phone:</span> <span class="contact_info">(213)-800-4730</span><br>
   		<span class="contact_info_tag">GitHub:</span> <span class="contact_info">Demi-O</span><br>
-  		<span class="contact_info_tag">Website:</span> <span class="contact_info">demiladeolagoke.com</span>
+  		<span class="contact_info_tag">LinkedIn:</span> <span class="contact_info">linkedin.com/in/demi-olagoke-58325747</span>
+      <!-- <span class="contact_info_tag">Website:</span> <span class="contact_info">demiladeolagoke.com</span> -->
   	</div>
   </div>
 
@@ -39,6 +40,15 @@
   <div class ="section_head">
     Work Experience
   </div>
+  <div class="job">
+    <span class="subsection_head">Tinder</span>
+    <span class = subsection_role>Software Engineer, Backend</span>
+    <span class="subsection_details">Los Angeles, CA | July 2017 - Present</span>
+    <ul>
+      <li>Collaborated on the ideation, execution, release, and iteration of products and features such as Swipe Night, Festival Mode, Student Verification, Tinder University and Places</li>
+      <li>Technology/Languages: Javascript, Typescript, Java, Python, Node.js, Git, Dynamo, Redis, AWS Media Convert</li>
+    </ul>
+  </div>
   <div class="coop_job">
     <span class="subsection_head">Minted</span>
     <span class = subsection_role>Software Engineer</span>
@@ -57,9 +67,8 @@
     <ul>
       <li>Worked on MintChip, a digital currency backed by the Canadian government</li>
       <li>Developed features such as P2P money requests and fraud mitigation using transaction limits</li>
-      <li>Decreased load times on the android application by implementing data caching</li>
       <li>Created an invite system where invited users could sign up and instantly receive the money sent to them</li>
-      <li>Technology/Languages: Javascript, Node.js, AngularJS, Loopback, Java, SQLite, Android Studio, Git, MongoDB</li>
+      <li>Technology/Languages: Javascript, Node.js, AngularJS, Loopback, Git, MongoDB</li>
     </ul>
   </div>
   <div class="coop_job">
@@ -68,8 +77,7 @@
     <span class="subsection_details"> Waterloo, ON | May 2015 - August 2015</span>
     <ul>
       <li>Worked on HCI research into data exploration of geotagged information using multiple tablet devices and a tabletop</li>
-      <li>Implemented asynchronous real-time transfer of information between devices</li>
-      <li>Implemented HCI techniques for surfacing context-relevant information to users</li>
+      <li>Implemented real-time synchronization between devices & HCI techniques for surfacing relevant information to users</li>
       <li>Created summary visualizations from application logs for researchers to gain insight into user usage patterns</li>
       <li>Technology/Languages: C#, Javascript, Node.js, Processing 2, Git, Visual Studio</li>
     </ul>
@@ -99,8 +107,8 @@
   	<span class="subsection_head">WatHub (Fourth Year Design Project)</span>
   	<span class="subsection_details">March 2016 - March 2017</span>
   	<ul>
-  		<li>Website for students to share applications that they made</li>
-      <li>Set up the database and currently working on the API used by the frontend</li>
+  		<li>Website for students to share applications that they made to help themselves with school work</li>
+      <li>Set up the database and worked on the API used by the frontend</li>
       <li>Technology/Languages: Node.js, Javascript, Loopback, MongoDB, Git</li>
   	</ul>
   </div>
@@ -109,7 +117,6 @@
   	<span class="subsection_details">August 2015 - December 2015</span>
   	<ul>
   		<li>Windows application that allows control of other applications through gestures from a smartphone</li>
-  		<li>Used the Facade design pattern to enable control of desktop applications</li>
   		<li>Implemented real-time desktop notifications to alert users of actions made on the smartphone</li>
   		<li>Technology/Languages: C#, Visual Studio, Git</li>
   	</ul>
@@ -119,8 +126,7 @@
   	<span class="subsection_details">May 2015</span>
   	<ul>
   		<li>Nicholas Cage themed snake game with a battle mode developed with three others at a Game Jam</li>
-      <li>Peer programmed to add food generation, score counting, speed up and slow down</li>
-      <li>Created visual assets such as the grass background and snake head animation</li>
+      <li>Peer programmed to add food generation, speed changes & created visual assets (e.g. snake head animation)</li>
       <li>Technology/Languages: C#, Unity 5, GIMP, Git</li>
   	</ul>
   </div>
@@ -145,7 +151,7 @@
       <li>Technology/Languages: Java, Eclipse</li>
   	</ul>
   </div> -->
-  <span class="project_type">(Other projects available on website: www.demiladeolagoke.com)</span>
+  <!-- <span class="project_type">(Other projects available on website: www.demiladeolagoke.com)</span> -->
 
   <div class ="section_head">
 		Interests
