added Tinder experience, removed Blackberry experience, cleaned up css, saving for now

--- a/General Resume.html
+++ b/General Resume.html
@@ -7,7 +7,6 @@
 </head>
 
 <body>
-
   <div id="header">
   	<div id="name">
   		Demi<br>
@@ -18,7 +17,6 @@
   		<span class="contact_info_tag">Phone:</span> <span class="contact_info">(213)-800-4730</span><br>
   		<span class="contact_info_tag">GitHub:</span> <span class="contact_info">Demi-O</span><br>
   		<span class="contact_info_tag">LinkedIn:</span> <span class="contact_info">linkedin.com/in/demi-olagoke-58325747</span>
-      <!-- <span class="contact_info_tag">Website:</span> <span class="contact_info">demiladeolagoke.com</span> -->
   	</div>
   </div>
 
@@ -42,11 +40,16 @@
   </div>
   <div class="job">
     <span class="subsection_head">Tinder</span>
-    <span class = subsection_role>Software Engineer, Backend</span>
-    <span class="subsection_details">Los Angeles, CA | July 2017 - Present</span>
+    <span class = subsection_role>Senior Software Engineer, Backend</span>
+    <span class="subsection_details">Los Angeles, CA | July 2017 - August 2022</span>
     <ul>
-      <li>Collaborated on the ideation, execution, release, and iteration of products and features such as Swipe Night, Festival Mode, Student Verification, Tinder University and Places</li>
-      <li>Technology/Languages: Javascript, Typescript, Java, Python, Node.js, Git, Dynamo, Redis, AWS Media Convert</li>
+      <li>Helped the ideation, execution, and release of products such as Explore, Swipe Night, Fast Chat, Festival Mode etc.</li>
+      <li>Architected and led the development of products/features such as Games, Message Suggestions, and Live Counter</li>
+      <li>Owned parts of products such as video transcoding for Swipe Night videos, and the interactions service for Fast Chat</li>
+      <li>Transitioned the transcoding service from FFmpeg to AWS Media Convert, reducing video processing times by ~85%</li>
+      <li>Updated the pairing service for fast chats to an event-driven architecture, enabling concurrent release in 20+ countries</li>
+      <li>Mentored junior engineers, ensuring their professional development goals were met while also contributing to the team</li>
+      <li>Technology/Languages: Javascript/Typescript, Java, Node.js, AWS DynamoDB, Redis, Kafka, AWS Media Convert etc.</li>
     </ul>
   </div>
   <div class="coop_job">
@@ -79,26 +82,10 @@
       <li>Worked on HCI research into data exploration of geotagged information using multiple tablet devices and a tabletop</li>
       <li>Implemented real-time synchronization between devices & HCI techniques for surfacing relevant information to users</li>
       <li>Created summary visualizations from application logs for researchers to gain insight into user usage patterns</li>
-      <li>Technology/Languages: C#, Javascript, Node.js, Processing 2, Git, Visual Studio</li>
+      <li>Technology/Languages: C#, Javascript, Node.js, Git, Visual Studio</li>
     </ul>
   </div>
-  <div class="coop_job">
-    <span class="subsection_head">BlackBerry</span>
-    <span class = subsection_role>Software Test Engineer</span>
-    <span class="subsection_details">Mississauga, ON | September 2014 - December 2014</span>
-    <ul>
-      <li>Developed unit, integration and UX tests to achieve full test coverage for the BlackBerry Assistant</li>
-      <li>Technology/Languages: Robot Framework, Git</li>
-    </ul>
-  </div>
-  <!-- <div class="coop_job">
-    <span class="subsection_head">Mabel's Labels</span>
-    <span class="subsection_details">Developer | Hamilton, ON | January 2014 - April 2014</span>
-    <ul>
-      <li>Developed an application to measure characters of a given font for a better printing experience</li>
-      <li>Technology/Languages: C#, MySQL, Subversion, Visual Studio</li>
-    </ul>
-  </div> -->
+  <span class="other_experience">(Additional experience available on LinkedIn)</span>
 
   <div id="push_down_projects" class ="section_head">
   	Projects
@@ -130,31 +117,11 @@
       <li>Technology/Languages: C#, Unity 5, GIMP, Git</li>
   	</ul>
   </div>
-  <!-- <div class="project">
-  	<span class="subsection_head">Fortune Teller By 2Dp</span>
-  	<span class="subsection_details">August 2013</span><br>
-  	<ul>
-  		<li>Fortune teller android application developed with a friend</li>
-      <li>Made use of the device accelerometer to sense user input</li>
-      <li>Used the media API to give the user an audible response</li>
-      <li>Technology/Languages: Java, Eclipse</li>
-  	</ul>
-  </div> -->
-  <!-- <div class="project">
-  	<span class="subsection_head">Tic Tac Toe By 2Dp</span>
-  	<span class="subsection_details">June 2013 - July 2013</span><br>
-  	<ul>
-  		<li>Tic-tac-toe game developed with a friend</li>
-      <li>Developed the artificial intelligence</li>
-      <li>Developed the algorithm used to check for wins</li>
-      <li>Used views to determine where on the board the user clicked</li>
-      <li>Technology/Languages: Java, Eclipse</li>
-  	</ul>
-  </div> -->
-  <!-- <span class="project_type">(Other projects available on website: www.demiladeolagoke.com)</span> -->
+  <span class="other_experience">(Other projects available on LinkedIn)</span>
 
   <div class ="section_head">
 		Interests
 	</div>
-		<li>Soccer, dancing (Hip Hop, West African and Salsa), exploring new places, ping pong and console gaming</li></body>
+	<li>Soccer, dance (Hip Hop, West African and Forró), reading, travel, ping pong and console gaming</li>
+</body>
 </html>
