--- a/General Resume.html
+++ b/General Resume.html
@@ -41,9 +41,9 @@
   <div class="job">
     <span class="subsection_head">Tinder</span>
     <span class = subsection_role>Senior Software Engineer, Backend</span>
-    <span class="subsection_details">Los Angeles, CA | July 2017 - August 2022</span>
+    <span class="subsection_details">Los Angeles, CA | July 2017 - September 2022</span>
     <ul>
-      <li>Helped the ideation, execution, and release of products such as Explore, Swipe Night, Fast Chat, Festival Mode etc.</li>
+      <li>Helped the ideation, execution, and release of products such as Explore, Swipe Night, Fast Chat, and Festival Mode</li>
       <li>Architected and led the development of products/features such as Games, Message Suggestions, and Live Counter</li>
       <li>Owned parts of products such as video transcoding for Swipe Night videos, and the interactions service for Fast Chat</li>
       <li>Transitioned the transcoding service from FFmpeg to AWS Media Convert, reducing video processing times by ~85%</li>
@@ -60,7 +60,7 @@
       <li>Mitigated revenue loss by thousands of dollars by fixing issues preventing users from purchasing products</li>
       <li>Reduced size of the UI package webpack bundle by 20% by moving images from the package to S3</li>
       <li>Helped increase user conversion by moving products to the new product display page through data and code changes</li>
-      <li>Technology/Languages: Javascript, React (Redux), Python, Node.js, Git, MySQL</li>
+      <li>Technology/Languages: Javascript, React (Redux), Python, Node.js, MySQL</li>
     </ul>
   </div>
   <div class="coop_job">
@@ -71,7 +71,7 @@
       <li>Worked on MintChip, a digital currency backed by the Canadian government</li>
       <li>Developed features such as P2P money requests and fraud mitigation using transaction limits</li>
       <li>Created an invite system where invited users could sign up and instantly receive the money sent to them</li>
-      <li>Technology/Languages: Javascript, Node.js, AngularJS, Loopback, Git, MongoDB</li>
+      <li>Technology/Languages: Javascript, Node.js, AngularJS, Loopback, MongoDB</li>
     </ul>
   </div>
   <div class="coop_job">
@@ -82,7 +82,7 @@
       <li>Worked on HCI research into data exploration of geotagged information using multiple tablet devices and a tabletop</li>
       <li>Implemented real-time synchronization between devices & HCI techniques for surfacing relevant information to users</li>
       <li>Created summary visualizations from application logs for researchers to gain insight into user usage patterns</li>
-      <li>Technology/Languages: C#, Javascript, Node.js, Git, Visual Studio</li>
+      <li>Technology/Languages: C#, Javascript, Node.js, Visual Studio</li>
     </ul>
   </div>
   <span class="other_experience">(Additional experience available on LinkedIn)</span>
@@ -91,12 +91,22 @@
   	Projects
   </div>
   <div class="project">
+    <span class="subsection_head">Mixee</span>
+    <span class="subsection_details">July 2023 - September 2023</span>
+    <ul>
+      <li>Mobile application that aims to create community for Disc Jockeys and their audience</li>
+      <li>Independently set up the backend (API and database) used by the frontend application</li>
+      <li>Wrote scripts to handle the collection and uploading of events to the backend</li>
+      <li>Technology/Languages: Python, FastAPI, Strapi, MongoDB, Railway</li>
+    </ul>
+  </div>
+  <div class="project">
   	<span class="subsection_head">WatHub (Fourth Year Design Project)</span>
   	<span class="subsection_details">March 2016 - March 2017</span>
   	<ul>
   		<li>Website for students to share applications that they made to help themselves with school work</li>
-      <li>Set up the database and worked on the API used by the frontend</li>
-      <li>Technology/Languages: Node.js, Javascript, Loopback, MongoDB, Git</li>
+      <li>Set up the database and worked with others on the API used by the frontend</li>
+      <li>Technology/Languages: Node.js, Javascript, Loopback, MongoDB</li>
   	</ul>
   </div>
   <div class="project">
@@ -105,23 +115,23 @@
   	<ul>
   		<li>Windows application that allows control of other applications through gestures from a smartphone</li>
   		<li>Implemented real-time desktop notifications to alert users of actions made on the smartphone</li>
-  		<li>Technology/Languages: C#, Visual Studio, Git</li>
+  		<li>Technology/Languages: C#, Ngrok, Visual Studio</li>
   	</ul>
   </div>
-  <div class="project">
+  <!-- <div class="project">
   	<span class="subsection_head">Snake In The Cage</span>
   	<span class="subsection_details">May 2015</span>
   	<ul>
   		<li>Nicholas Cage themed snake game with a battle mode developed with three others at a Game Jam</li>
       <li>Peer programmed to add food generation, speed changes & created visual assets (e.g. snake head animation)</li>
-      <li>Technology/Languages: C#, Unity 5, GIMP, Git</li>
+      <li>Technology/Languages: C#, Unity 5, GIMP</li>
   	</ul>
-  </div>
+  </div> -->
   <span class="other_experience">(Other projects available on LinkedIn)</span>
 
-  <div class ="section_head">
+  <!-- <div class ="section_head">
 		Interests
 	</div>
-	<li>Soccer, dance (Hip Hop, West African and Forró), reading, travel, ping pong and console gaming</li>
+	<li>Soccer, dance (Hip Hop, West African and Forró), reading, travel, ping pong and console gaming</li> -->
 </body>
 </html>
