applied feedback(consolidated skills and moved some things), added some highlights, still need to figure out time off section

--- a/General Resume.html
+++ b/General Resume.html
@@ -15,41 +15,36 @@
   	<div id="contact_info_div">
   		<span class="contact_info_tag">Email:&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="contact_info">demilade.olagoke@gmail.com</span><br>
   		<span class="contact_info_tag">Phone:</span> <span class="contact_info">(213)-800-4730</span><br>
-  		<span class="contact_info_tag">GitHub:</span> <span class="contact_info">Demi-O</span><br>
+  		<span class="contact_info_tag">GitHub:</span> <span class="contact_info">github.com/Demi-O</span><br>
   		<span class="contact_info_tag">LinkedIn:</span> <span class="contact_info">linkedin.com/in/demi-olagoke-58325747</span>
   	</div>
   </div>
 
-  <div class = "section_head">
-    Education
+  <div class="section_head">
+    Technical Skills
   </div>
-  <div class="section_info">
-    <div class="activity">
-      <span class="subsection_head">University of Waterloo</span>
-      <span class = subsection_role>Bachelor of Software Engineering</span>
-      <span class="subsection_details">September 2012 - June 2017</span>
-      <ul>
-        <li>Courses: Computer Security and Privacy, Concurrent and Parallel Programming, Cooperative and Adaptive Algorithms, Computer Networks, Operating Systems, Embedded Software, Data Structures and Data Management</li>
-        <li>Events Coordinator (May 2015 - April 2016) of the Black Association for Student Expression</li>
-      </ul>
-    </div>
+  <div class="subsection_paragraph_div">
+    <ul>
+      <li><span class="colon_list">Languages</span>: Javascript/Typescript, Python, Java, C#, SQL, GraphQL, HTML/CSS</li>
+      <li><span class="colon_list">Server-Side Technologies</span>: Node.js, Express, FastAPI, AWS (S3, DynamoDB, ElastiCache, Media Convert, Lambda, CloudFront), MongoDB, PostgreSQL, Apache Kafka, Debezium, Strapi, Docker, Kubernetes, Railway, Ngrok</li>
+      <li><span class="colon_list">Collaboration Tools</span>: Git, Jira, Confluence</li>
+    </ul>
   </div>
 
-  <div class ="section_head">
-    Work Experience
+  <div class="section_head">
+    Experience
   </div>
   <div class="job">
     <span class="subsection_head">Tinder</span>
     <span class = subsection_role>Senior Software Engineer, Backend</span>
     <span class="subsection_details">Los Angeles, CA | July 2017 - September 2022</span>
     <ul>
-      <li>Helped the ideation, execution, and release of products such as Explore, Swipe Night, Fast Chat, and Festival Mode</li>
       <li>Architected and led the development of products/features such as Games, Message Suggestions, and Live Counter</li>
       <li>Owned parts of products such as video transcoding for Swipe Night videos, and the interactions service for Fast Chat</li>
-      <li>Transitioned the transcoding service from FFmpeg to AWS Media Convert, reducing video processing times by ~85%</li>
-      <li>Updated the pairing service for fast chats to an event-driven architecture, enabling concurrent release in 20+ countries</li>
+      <li>Updated the pairing service for fast chats to an <span class="colon_list">event-driven architecture</span>, enabling concurrent release in <span class="colon_list">20+ countries</span></li>
+      <li>Transitioned the transcoding service from FFmpeg to AWS Media Convert, reducing video processing times by <span class="colon_list">~85%</span>(hours)</li>
       <li>Mentored junior engineers, ensuring their professional development goals were met while also contributing to the team</li>
-      <li>Technology/Languages: Javascript/Typescript, Java, Node.js, AWS DynamoDB, Redis, Kafka, AWS Media Convert etc.</li>
+      <li>Contributed to creating and launching products like Explore, Swipe Night, Fast Chat, and Festival Mode, used by <span class="colon_list">millions</span></li>
     </ul>
   </div>
   <div class="coop_job">
@@ -57,10 +52,9 @@
     <span class = subsection_role>Software Engineer</span>
     <span class="subsection_details">San Francisco, CA | September 2016 - December 2016</span>
     <ul>
-      <li>Mitigated revenue loss by thousands of dollars by fixing issues preventing users from purchasing products</li>
-      <li>Reduced size of the UI package webpack bundle by 20% by moving images from the package to S3</li>
+      <li>Mitigated revenue loss by <span class="colon_list">thousands of dollars</span> by fixing issues preventing users from purchasing products</li>
+      <li>Reduced size of the UI package webpack bundle by <span class="colon_list">20%</span> by moving images from the package to S3</li>
       <li>Helped increase user conversion by moving products to the new product display page through data and code changes</li>
-      <li>Technology/Languages: Javascript, React (Redux), Python, Node.js, MySQL</li>
     </ul>
   </div>
   <div class="coop_job">
@@ -71,7 +65,6 @@
       <li>Worked on MintChip, a digital currency backed by the Canadian government</li>
       <li>Developed features such as P2P money requests and fraud mitigation using transaction limits</li>
       <li>Created an invite system where invited users could sign up and instantly receive the money sent to them</li>
-      <li>Technology/Languages: Javascript, Node.js, AngularJS, Loopback, MongoDB</li>
     </ul>
   </div>
   <div class="coop_job">
@@ -80,12 +73,10 @@
     <span class="subsection_details"> Waterloo, ON | May 2015 - August 2015</span>
     <ul>
       <li>Worked on HCI research into data exploration of geotagged information using multiple tablet devices and a tabletop</li>
-      <li>Implemented real-time synchronization between devices & HCI techniques for surfacing relevant information to users</li>
+      <li>Implemented <span class="colon_list">real-time synchronization</span> between devices & HCI techniques for surfacing relevant information to users</li>
       <li>Created summary visualizations from application logs for researchers to gain insight into user usage patterns</li>
-      <li>Technology/Languages: C#, Javascript, Node.js, Visual Studio</li>
     </ul>
   </div>
-  <span class="other_experience">(Additional experience available on LinkedIn)</span>
 
   <div id="push_down_projects" class ="section_head">
   	Projects
@@ -97,7 +88,6 @@
       <li>Mobile application that aims to create community for Disc Jockeys and their audience</li>
       <li>Independently set up the backend (API and database) used by the frontend application</li>
       <li>Wrote scripts to handle the collection and uploading of events to the backend</li>
-      <li>Technology/Languages: Python, FastAPI, Strapi, MongoDB, Railway</li>
     </ul>
   </div>
   <div class="project">
@@ -105,33 +95,37 @@
   	<span class="subsection_details">March 2016 - March 2017</span>
   	<ul>
   		<li>Website for students to share applications that they made to help themselves with school work</li>
-      <li>Set up the database and worked with others on the API used by the frontend</li>
-      <li>Technology/Languages: Node.js, Javascript, Loopback, MongoDB</li>
+      <li>Set up the database and collaborated with others on the API used by the frontend</li>
   	</ul>
   </div>
-  <div class="project">
-  	<span class="subsection_head">Tilde</span>
-  	<span class="subsection_details">August 2015 - December 2015</span>
-  	<ul>
-  		<li>Windows application that allows control of other applications through gestures from a smartphone</li>
-  		<li>Implemented real-time desktop notifications to alert users of actions made on the smartphone</li>
-  		<li>Technology/Languages: C#, Ngrok, Visual Studio</li>
-  	</ul>
-  </div>
-  <!-- <div class="project">
-  	<span class="subsection_head">Snake In The Cage</span>
-  	<span class="subsection_details">May 2015</span>
-  	<ul>
-  		<li>Nicholas Cage themed snake game with a battle mode developed with three others at a Game Jam</li>
-      <li>Peer programmed to add food generation, speed changes & created visual assets (e.g. snake head animation)</li>
-      <li>Technology/Languages: C#, Unity 5, GIMP</li>
-  	</ul>
-  </div> -->
   <span class="other_experience">(Other projects available on LinkedIn)</span>
 
-  <!-- <div class ="section_head">
-		Interests
+  <div class = "section_head">
+    Education
+  </div>
+  <div class="section_info">
+    <div class="activity">
+      <span class="subsection_head">University of Waterloo</span>
+      <span class = subsection_role>Bachelor of Software Engineering</span>
+      <span class="subsection_details">September 2012 - June 2017</span>
+      <ul>
+        <li><span class="colon_list">Relevant Courses</span>: Computer Security and Privacy, Concurrent and Parallel Programming, Cooperative and Adaptive Algorithms, Computer Networks, Operating Systems, Embedded Software, Data Structures and Data Management</li>
+        <li>Events Coordinator (May 2015 - April 2016) of the Black Association for Student Expression</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class ="section_head">
+		My Time Off
 	</div>
-	<li>Soccer, dance (Hip Hop, West African and Forró), reading, travel, ping pong and console gaming</li> -->
+  <div class="subsection_paragraph_div">
+  	I took some time to rest, travel, and work on personal habits
+    <ul>
+      <li>Worked on solidifying a reading habit, a relevant book recently read is "Designing Data-Intensive Applications"</li>
+      <li>Explored coding interests leading to Mixee and a GraphQL course, also gained basic proficiency in Yoruba and Portuguese</li>
+      <li>Traveled to multiple countries, while also solidifying an exercise routine consisting of soccer and the gym</li>
+    </ul>
+  </div>
+
 </body>
 </html>
