removed time off section for overview, applied feedback for Tinder and Mixee bullet points

--- a/Resume.html
+++ b/Resume.html
@@ -8,16 +8,26 @@
 
 <body>
   <div id="header">
-  	<div id="name">
-  		Demi<br>
-  		Olagoke
-  	</div>
-  	<div id="contact_info_div">
-  		<span class="contact_info_tag">Email:&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="contact_info">demilade.olagoke@gmail.com</span><br>
-  		<span class="contact_info_tag">Phone:</span> <span class="contact_info">(213)-800-4730</span><br>
-  		<span class="contact_info_tag">GitHub:</span> <span class="contact_info">github.com/Demi-O</span><br>
-  		<span class="contact_info_tag">LinkedIn:</span> <span class="contact_info">linkedin.com/in/demi-olagoke-58325747</span>
-  	</div>
+    <div id="name">
+      Demi<br>
+      Olagoke
+    </div>
+    <div id="contact_info_div">
+      <span class="contact_info_tag">Email:&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="contact_info">demilade.olagoke@gmail.com</span><br>
+      <span class="contact_info_tag">Phone:</span> <span class="contact_info">(213)-800-4730</span><br>
+      <span class="contact_info_tag">GitHub:</span> <span class="contact_info">github.com/Demi-O</span><br>
+      <span class="contact_info_tag">LinkedIn:</span> <span class="contact_info">linkedin.com/in/demi-olagoke-58325747</span>
+    </div>
+  </div>
+
+  <div class ="section_head">
+    Overview
+  </div>
+  <div class="subsection_paragraph_div">
+    <ul>
+      <li>Senior Backend Engineer experienced with high volume consumer applications, most notably Tinder</li>
+      <li>Looking for opportunities after taking a refreshing period to focus on personal goals</li>
+    </ul>
   </div>
 
   <div class="section_head">
@@ -25,8 +35,8 @@
   </div>
   <div class="subsection_paragraph_div">
     <ul>
-      <li><span class="colon_list">Languages</span>: Javascript/Typescript, Python, Java, C#, SQL, GraphQL, HTML/CSS</li>
-      <li><span class="colon_list">Server-Side Technologies</span>: Node.js, Express, FastAPI, AWS (S3, DynamoDB, ElastiCache, Media Convert, Lambda, CloudFront), MongoDB, PostgreSQL, Apache Kafka, Debezium, Strapi, Docker, Kubernetes, Railway, Ngrok</li>
+      <li><span class="colon_list">Languages</span>: Javascript/Typescript, Python, Java, C#, SQL, HTML/CSS</li>
+      <li><span class="colon_list">Server-Side Technologies</span>: Node.js, Express, FastAPI, AWS (S3, DynamoDB, ElastiCache, Lambda, Media Convert, CloudFront, EC2), MongoDB, PostgreSQL, Apache Kafka, Debezium, Strapi, Docker, Kubernetes, Prometheus, Grafana, Railway, Ngrok</li>
       <li><span class="colon_list">Collaboration Tools</span>: Git, Jira, Confluence</li>
     </ul>
   </div>
@@ -41,10 +51,12 @@
     <ul>
       <li>Architected and led the development of products/features such as Games, Message Suggestions, and Live Counter</li>
       <li>Owned parts of products such as video transcoding for Swipe Night videos, and the interactions service for Fast Chat</li>
-      <li>Updated the pairing service for fast chats to an <span class="colon_list">event-driven architecture</span>, enabling concurrent release in <span class="colon_list">20+ countries</span></li>
-      <li>Transitioned the transcoding service from FFmpeg to AWS Media Convert, reducing video processing times by <span class="colon_list">~85%</span>(hours)</li>
+      <li>Transitioned pairing service for fast chats to an <span class="colon_list">event-driven architecture</span>, enabling concurrent release in <span class="colon_list">20+ countries</span></li>
+      <li>Transitioned transcoding service to AWS Media Convert, saving <span class="colon_list">weeks</span> on content processing (<span class="colon_list">~85%</span> reduction)</li>
+      <li>Designed microservices, documented, handled security and operations reviews, set up infrastructure, and planned releases</li>
+      <li>Led cross-functional efforts with engineering and non-engineering teams to successfully release products and experiments</li>
+      <li>Contributed to creating and launching products like Explore, Swipe Night, Fast Chat, Festival Mode, to <span class="colon_list">millions of users</span></li>
       <li>Mentored junior engineers, ensuring their professional development goals were met while also contributing to the team</li>
-      <li>Contributed to creating and launching products like Explore, Swipe Night, Fast Chat, and Festival Mode, used by <span class="colon_list">millions</span></li>
     </ul>
   </div>
   <div class="coop_job">
@@ -79,24 +91,17 @@
   </div>
 
   <div id="push_down_projects" class ="section_head">
-  	Projects
+    Projects
   </div>
   <div class="project">
     <span class="subsection_head">Mixee</span>
     <span class="subsection_details">July 2023 - September 2023</span>
     <ul>
-      <li>Mobile application that aims to create community for Disc Jockeys and their audience</li>
+      <li>Mobile application aiming to create community for Disc Jockeys and their audience</li>
+      <li>Collaborated with a product manager from a previous role to achieve shared goals</li>
       <li>Independently set up the backend (API and database) used by the frontend application</li>
       <li>Wrote scripts to handle the collection and uploading of events to the backend</li>
     </ul>
-  </div>
-  <div class="project">
-  	<span class="subsection_head">WatHub (Fourth Year Design Project)</span>
-  	<span class="subsection_details">March 2016 - March 2017</span>
-  	<ul>
-  		<li>Website for students to share applications that they made to help themselves with school work</li>
-      <li>Set up the database and collaborated with others on the API used by the frontend</li>
-  	</ul>
   </div>
   <span class="other_experience">(Other projects available on LinkedIn)</span>
 
@@ -113,18 +118,6 @@
         <li>Events Coordinator (May 2015 - April 2016) of the Black Association for Student Expression</li>
       </ul>
     </div>
-  </div>
-
-  <div class ="section_head">
-		My Time Off
-	</div>
-  <div class="subsection_paragraph_div">
-  	I took some time to rest, travel, and work on personal habits
-    <ul>
-      <li>Worked on solidifying a reading habit, a relevant book recently read is "Designing Data-Intensive Applications"</li>
-      <li>Explored coding interests leading to Mixee and a GraphQL course, also gained basic proficiency in Yoruba and Portuguese</li>
-      <li>Traveled to multiple countries, while also solidifying an exercise routine consisting of soccer and the gym</li>
-    </ul>
   </div>
 
 </body>
